# aws-resources

./: .gitignore  README.md  example-report.json  example-report.md  pyproject.toml
aws_resources/: __init__.py  __main__.py
aws_resources/analyzers/: __init__.py  base.py  cloudfront.py  directconnect.py  documentdb.py  dynamodb.py  ec2.py  ec2_other.py  ecr.py  ecs.py  efs.py  eks.py  elasticache.py  elb.py  kms.py  lambda.py  opensearch.py  rds.py  registry.py  route53.py  s3.py  ses.py  sns.py  sqs.py  vpc.py
aws_resources/collectors/: __init__.py  cost_explorer.py
aws_resources/output/: markdown.py
tests/: test_cloudfront_analyzer.py  test_cost_explorer.py  test_directconnect_analyzer.py  test_documentdb_analyzer.py  test_dynamodb_analyzer.py  test_ec2_analyzer.py  test_ec2_other_analyzer.py  test_ecr_analyzer.py  test_ecs_analyzer.py  test_efs_analyzer.py  test_eks_analyzer.py  test_elasticache_analyzer.py  test_elb_analyzer.py  test_kms_analyzer.py  test_lambda_analyzer.py  test_main.py  test_opensearch_analyzer.py  test_rds_analyzer.py  test_route53_analyzer.py  test_s3_analyzer.py  test_ses_analyzer.py  test_sns_analyzer.py  test_sqs_analyzer.py  test_vpc_analyzer.py
